[tool.poetry]
name = "xpackage"
version = "0.1.8"
description = "A dummy X package"
authors = ["Martin Prudek <martin@prudek.eu>"]
license = "GPL v2"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
